# ontv

./: .gitignore  Cargo.toml  Kick.toml  MANIFEST.in  README.markdown  README.md  Trunk.toml  build.rs  requirements.txt  setup.py
.github/workflows/: ci.yml  weekly.yml
assets/: missing_banner.xcf
crates/api/: Cargo.toml
crates/api/src/: broadcast.rs  cache.rs  config.rs  etag.rs  id.rs  lib.rs  model.rs  raw.rs  request.rs
crates/ontv/: Cargo.toml
crates/ontv/assets/: missing_banner.xcf  missing_poster.xcf  missing_screencap.xcf
crates/ontv/examples/: axum.rs
crates/ontv/migrations/: 2025-01-05.sql
crates/ontv/src/: api.rs  assets.rs  backend.rs  cache.rs  compat.rs  comps.rs  database.rs  error.rs  files.rs  import.rs  lib.rs  main.rs  model.rs  page.rs  paths.rs  queue.rs  search.rs  service.rs  state.rs
crates/ontv/src/api/: common.rs  themoviedb.rs  thetvdb.rs
crates/ontv/src/backend/: paths.rs
crates/ontv/src/commands/: buf.rs
crates/ontv/src/compat/: hex.rs
crates/ontv/src/database/: episodes.rs  format.rs  mod.rs  movies.rs  pending.rs  remotes.rs  seasons.rs  series.rs  sync.rs  watched.rs
crates/ontv/src/files/: episodes.rs  format.rs  movies.rs  pending.rs  series.rs  sync.rs  watched.rs
crates/ontv/src/model/: etag.rs
crates/ontv/src/utils/: mod.rs  option_iter.rs
crates/ontv/src/web/: api.rs  bundle.rs  error.rs  image_cache.rs  mod.rs  nonbundle.rs  ws.rs
crates/web/: Cargo.toml  index.html
crates/web/src/: error.rs  main.rs
crates/web/src/components/: app.rs  dashboard.rs  mod.rs  series.rs
crates/web/style/: _mixins.scss  style.scss
desktop/: se.tedro.OnTV.desktop
ontv/: __init__.py  api.py  dao.py  database.py  format.py  utils.py
ontv/action/: add.py  compact.py  list.py  mark.py  next.py  remove.py  search.py  show.py  sync.py
src/: api.rs  application.rs  assets.rs  cache.rs  commands.rs  compat.rs  component.rs  comps.rs  context.rs  database.rs  history.rs  import.rs  lib.rs  lock.rs  main.rs  message.rs  model.rs  page.rs  params.rs  queue.rs  service.rs  state.rs  style.rs  tasks.rs  thetvdb.rs  utils.rs
src/api/: common.rs  themoviedb.rs  thetvdb.rs
src/commands/: buf.rs
src/compat/: hex.rs
src/comps/: calendar.rs  confirm.rs  episode.rs  episode_or_movie.rs  movie_actions.rs  movie_banner.rs  movie_item.rs  ordering.rs  remove_watch.rs  season_info.rs  series_actions.rs  series_banner.rs  watch.rs  watch_remaining.rs
src/database/: episodes.rs  format.rs  iter.rs  movies.rs  pending.rs  remotes.rs  seasons.rs  series.rs  sync.rs  watched.rs
src/model/: etag.rs  hex.rs  hex16.rs  raw.rs  raw16.rs  tests.rs
src/page/: dashboard.rs  errors.rs  movie.rs  movies_list.rs  queue.rs  search.rs  season.rs  series.rs  series_list.rs  settings.rs  watch_next.rs
src/service/: paths.rs  series.rs  watched.rs
src/tasks/: buf.rs
src/utils/: hoverable.rs  singleton.rs  timeout.rs
test/: test_database_dictdb.py  test_database_dictstorage.py  test_database_setdb.py
tools/: fedora-install
tvdb/: __init__.py  api.py  format.py  utils.py
tvdb/action/: add.py  mark.py  next.py  remove.py  search.py  show.py
