[package]
name = "ontv"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.74"
description = "A rich desktop application for tracking tv shows"
documentation = "https://docs.rs/ontv"
readme = "README.md"
homepage = "https://github.com/udoprog/ontv"
repository = "https://github.com/udoprog/ontv"
license = "MIT OR Apache-2.0"
keywords = ["gui", "iced", "tmdb", "tvdb"]
categories = ["gui"]

exclude = [
    "assets/*.xcf",
    "images/",
]

[features]
default = []
cli = []

[dependencies]
anyhow = "1.0.79"
arrayvec = "0.7.4"
base64 = "0.21.7"
bstr = "1.9.0"
bytes = { version = "1.5.0", features = ["serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
directories-next = "2.0.0"
fixed-map = "0.9.3"
futures = "0.3.30"
iced = { version = "0.12.0", features = ["image", "tokio", "advanced"] }
iced_futures = { version = "0.12.0", features = ["tokio"] }
image_rs = { version = "0.24.8", package = "image" }
leaky-bucket = "1.0.1"
parking_lot = "0.12.1"
relative-path = { version = "1.9.2", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_repr = "0.1.18"
serde_yaml = "0.9.31"
tempfile = "3.10.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
twox-hash = "1.6.3"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
webbrowser = "0.8.12"

[target.'cfg(windows)'.dependencies]
winctx = "0.0.19"

[build-dependencies]
anyhow = "1.0.79"
winres = "0.1.12"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ontv", dest = "/usr/bin/", mode = "755" },
    { source = "desktop/se.tedro.OnTV.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "desktop/se.tedro.OnTV.svg", dest = "/usr/share/icons/hicolor/scalable/apps/", mode = "644" }
]
