[package]
name = "ontv"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.93"
description = "A rich desktop application for tracking tv shows"
documentation = "https://docs.rs/ontv"
readme = "README.md"
homepage = "https://github.com/udoprog/ontv"
repository = "https://github.com/udoprog/ontv"
license = "MIT OR Apache-2.0"
keywords = ["gui", "iced", "tmdb", "tvdb"]
categories = ["gui"]

exclude = [
    "assets/*.xcf",
    "images/",
]

[features]
default = []
cli = []

[dependencies]
anyhow = "1.0.79"
arrayvec = "0.7.4"
base64 = "0.22.1"
bstr = "1.9.0"
bytes = { version = "1.5.0", features = ["serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
directories-next = "2.0.0"
fixed-map = "0.9.5"
futures = "0.3.30"
iced = { version = "0.14.0", features = ["image", "tokio", "advanced"] }
iced_futures = { version = "0.14.0", features = ["tokio"] }
image_rs = { version = "0.25.9", package = "image" }
leaky-bucket = "1.0.1"
parking_lot = "0.12.1"
relative-path = { version = "2.0.1", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_repr = "0.1.18"
serde_yaml = "0.9.31"
tempfile = "3.10.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
twox-hash = { version = "2.1.2", default-features = false, features = ["alloc", "std", "xxhash3_128"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
webbrowser = "1.0.5"

[target.'cfg(windows)'.dependencies]
winctx = "0.0.19"

[build-dependencies]
anyhow = "1.0.79"
winres = "0.1.12"
