[package]
name = "api"
edition = "2021"
publish = false

[dependencies]
borrowme = "0.0.14"
musli = { version = "0.0.124", features = ["alloc", "serde"] }
musli-axum = { version = "0.0.124", default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
serde = { version = "1.0.201", features = ["derive"] }
relative-path = { version = "1.9.3", features = ["serde"] }
serde_json = "1.0.117"
base64 = "0.22.1"
twox-hash = "1.6.3"
bstr = "1.9.1"
