[package]
name = "api"
edition = "2021"
publish = false

[dependencies]
borrowme = "0.0.15"
musli-web = { version = "0.1.4", default-features = false, features = ["api"] }
musli-core = "0.1.4"
musli = { version = "0.0.149", features = ["serde"] }
serde = { version = "1.0.201", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
