[package]
name = "ontv"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.92"
description = "A rich desktop application for tracking tv shows"
documentation = "https://docs.rs/ontv"
readme = "README.md"
homepage = "https://github.com/udoprog/ontv"
repository = "https://github.com/udoprog/ontv"
license = "MIT OR Apache-2.0"
keywords = ["gui", "iced", "tmdb", "tvdb"]
categories = ["gui"]

exclude = [
    "assets/*.xcf",
    "images/",
]

[features]
default = ["bundle"]
bundle = []

[dependencies]
api = { path = "../api" }

anyhow = "1.0.83"
arrayvec = "0.7.4"
axum = { version = "0.8.1", features = ["http1", "json", "query", "tracing", "http2", "ws"] }
base64 = "0.22.1"
bstr = "1.9.1"
bytes = { version = "1.6.0", features = ["serde"] }
jiff = { version = "0.2.17", default-features = false, features = ["std", "serde"] }
clap = { version = "4.5.4", features = ["derive"] }
directories-next = "2.0.0"
fixed-map = "0.9.5"
futures = "0.3.30"
leaky-bucket = "1.0.1"
musli-web = { version = "0.1.4", features = ["ws", "axum08"] }
musli-core = "0.1.0"
parking_lot = "0.12.2"
relative-path = { version = "2.0.1", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["query", "json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_repr = "0.1.19"
serde_yaml = "0.9.34"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
webbrowser = "1.0.1"
rand = { version = "0.9.0", features = ["small_rng"] }
image = "0.25.1"
tokio-stream = { version = "0.1.15", default-features = false }
rust-embed = { version = "8.3.0", default-features = false }
mime_guess = { version = "2.0.4", default-features = false }
sqll = { version = "0.11.2", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
winctx = "0.0.19"

[build-dependencies]
anyhow = "1.0.83"
winres = "0.1.12"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ontv", dest = "/usr/bin/", mode = "755" },
    { source = "desktop/se.tedro.OnTV.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "desktop/se.tedro.OnTV.svg", dest = "/usr/share/icons/hicolor/scalable/apps/", mode = "644" }
]
