[package]
name = "web"
edition = "2021"
publish = false

[dependencies]
api = { path = "../api" }

anyhow = "1.0.83"
gloo = "0.11.0"
log = "0.4.21"
musli = { version = "0.0.126", features = ["storage"] }
musli-yew = "0.0.126"
musli-axum = { version = "0.0.126", default-features = false }
slab = "0.4.9"
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
url = "2.5.0"
derive_more = { version = "2.0.1", default-features = false, features = ["from"] }

[dependencies.web-sys]
version = "0.3.69"
features = [
    "Performance"
]
