[package]
name = "web"
edition = "2021"
publish = false

[dependencies]
api = { path = "../api" }

anyhow = "1.0.83"
gloo = "0.11.0"
log = "0.4.21"
musli-web = { version = "0.1.2", default-features = false, features = ["web03", "yew022"] }
slab = "0.4.9"
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
url = "2.5.0"
derive_more = { version = "2.0.1", default-features = false, features = ["from"] }
